# Autonomous_forklift_source

./: .gitignore  .gitmodules  README.md  calc_function.py  can_comm.py  kalman_filter.py  move_function.py  object_detection_v9.py  pallet_forking.py  requirements.txt
cpp_port/: CMakeLists.txt  config.json
cpp_port/include/: BaseController.h  ForkliftController.h  ICanController.h  KalmanFilterWrapper.h  MockCanController.h  PalletForker.h  PalletTracker.h  RealSenseManager.h  YoloDetector.h  calculations.h
cpp_port/src/: BaseController.cpp  ForkliftController.cpp  KalmanFilterWrapper.cpp  PalletForker.cpp  PalletTracker.cpp  RealSenseManager.cpp  YoloDetector.cpp  calculations.cpp  main.cpp
python_original/: move_function.py  pallet_tracking.py
vir/: pyvenv.cfg
